<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:id="@+id/login_activity_layout"
    tools:context="com.nexis.running.activitys.LoginActivity">


    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="28sp"
        android:textColor="#000000"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="50dp" />


    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello, Welcome back!"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_below="@+id/textViewLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewWelcome"
        android:layout_marginTop="90dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="E-mail" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="Password"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FF00"
            android:text="Continue"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/signupRedirectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_below="@+id/login_button"
            android:layout_marginTop="14dp"
            android:padding="8dp"
            android:text="Not yet registered? Signup"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>
