<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/listBullet"
        android:icon="@drawable/ic_list_foreground"
        android:title="" />

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_foreground"
        android:title="" />
    <item
        android:id="@+id/person"
        android:icon="@drawable/ic_person_foreground"
        android:title="" />
</menu>