<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/chartView"
        android:layout_width="match_parent"
        android:layout_height="377dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="354dp"
        android:background="#FAF7F7"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />

    <ListView
        android:id="@+id/dataListView"
        android:layout_width="match_parent"
        android:layout_height="354dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="#FAF7F7"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:listSelector="@android:color/holo_blue_light" />





</RelativeLayout>